minor changes to the home page.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
             <li><a href="#"> FAQs </a></li>
             <li style="float:right"><a class="contact" href="#about">Contact</a></li>
         </ul>
-</body>
+        &nbsp;
+        <p class = "message-box"> 
+            Our mission is to support the need of Tibetan students aspiring for undergraduate education in the United States.
+        </p>
+    </body>
 </html>
