fixed styling and created initial page files

--- a/contact.html
+++ b/contact.html
@@ -41,11 +41,10 @@
             </ul>
         </div>
         <div class="home-box">
-            <h3>OUR STORY</h3>
+            <h3>CONTACT INFORMATION</h3>
             <p>
-                Our main reason for existing is the eternal wheel of life. We are in a cycle of life
-                and death. We experience so much pain but we also experience happiness. We are hateful
-                yet hold the capacity to love. Transient.
+                The best way to get in touch with us is through our
+                instagram. We also respond through our email. 
             </p>
         </div>
     </body>
