--- a/resources.html
+++ b/resources.html
@@ -41,11 +41,9 @@
             </ul>
         </div>
         <div class="home-box">
-            <h3>OUR STORY</h3>
+            <h3>RESOURCES</h3>
             <p>
-                Our main reason for existing is the eternal wheel of life. We are in a cycle of life
-                and death. We experience so much pain but we also experience happiness. We are hateful
-                yet hold the capacity to love. Transient.
+                Here are some resources to assist with your college application journey.
             </p>
         </div>
     </body>
