--- a/scholarships.html
+++ b/scholarships.html
@@ -41,11 +41,10 @@
             </ul>
         </div>
         <div class="home-box">
-            <h3>OUR STORY</h3>
+            <h3>SCHOLARSHIPS</h3>
             <p>
-                Our main reason for existing is the eternal wheel of life. We are in a cycle of life
-                and death. We experience so much pain but we also experience happiness. We are hateful
-                yet hold the capacity to love. Transient.
+                Here is a compiled list of scholarships. Some are specific 
+                to Tibetan students in exile.
             </p>
         </div>
     </body>
