--- a/tips.html
+++ b/tips.html
@@ -41,11 +41,9 @@
             </ul>
         </div>
         <div class="home-box">
-            <h3>OUR STORY</h3>
+            <h3>TIPS & ADVICE</h3>
             <p>
-                Our main reason for existing is the eternal wheel of life. We are in a cycle of life
-                and death. We experience so much pain but we also experience happiness. We are hateful
-                yet hold the capacity to love. Transient.
+                Here is a compiled list of tips and advice from 
             </p>
         </div>
     </body>
