--- a/volunteer.html
+++ b/volunteer.html
@@ -41,11 +41,9 @@
             </ul>
         </div>
         <div class="home-box">
-            <h3>OUR STORY</h3>
+            <h3>VOLUNTEER WITH SONTSA</h3>
             <p>
-                Our main reason for existing is the eternal wheel of life. We are in a cycle of life
-                and death. We experience so much pain but we also experience happiness. We are hateful
-                yet hold the capacity to love. Transient.
+                Are you interested in helping the Tibetan youth? Volunteer with us!
             </p>
         </div>
     </body>
