--- a/team.html
+++ b/team.html
@@ -41,10 +41,27 @@
             </ul>
         </div>
         <div class="home-box">
-            <h3>MEET THE SONTSA TEAM</h3>
-            <p>
-                This is our Sontsa Board.
-            </p>
+            <div class="wrapper">
+                <h2>TEAM MEMBERS</h2>
+                <hr>
+                <div class="members">
+                    <div class="team-members">
+                        <img src="images/img_2.jpg">
+                        <h4 class="name-member1">NAME</h4>
+                        <p class="desc-member1">DESCRIPTION</p>
+                    </div>
+                    <div class="team-members">
+                        <img src="images/img_2.jpg">
+                        <h4 class="name-member1">NAME</h4>
+                        <p class="desc-member1">DESCRIPTION</p>
+                    </div>
+                    <div class="team-members">
+                        <img src="images/img_2.jpg">
+                        <h4 class="name-member1">NAME</h4>
+                        <p class="desc-member1">DESCRIPTION</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
