--- a/team.html
+++ b/team.html
@@ -46,17 +46,17 @@
                 <hr>
                 <div class="members">
                     <div class="team-members">
-                        <img src="img_2.jpg">
+                        <img src="images/img_2.jpg">
                         <h4 class="name-member1">NAME</h4>
                         <p class="desc-member1">DESCRIPTION</p>
                     </div>
                     <div class="team-members">
-                        <img src="img_2.jpg">
+                        <img src="images/img_2.jpg">
                         <h4 class="name-member1">NAME</h4>
                         <p class="desc-member1">DESCRIPTION</p>
                     </div>
                     <div class="team-members">
-                        <img src="img_2.jpg">
+                        <img src="images/img_2.jpg">
                         <h4 class="name-member1">NAME</h4>
                         <p class="desc-member1">DESCRIPTION</p>
                     </div>
