Updated the home page logo, and began working on the footer
The footer still need to be edited to center it.

--- a/index.html
+++ b/index.html
@@ -1,52 +1,83 @@
 <!DOCTYPE html>
-    <head>
-        <title> Sontsa Initiative </title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="header">
-            <a href="index.html">
-            <img src="sontsa logo.png"></img>
-            <h1>Sontsa Initiative</h1>
-            </a>
-        </div>
-        <div class="topnav">
-            <ul>
-                <li class="nav-item"><a href="mentorship.html">MENTORSHIP</a></li>
-                <li class="nav-item"><a href="team.html">TEAM</a></li>
-                <li class="nav-item"><a href="volunteer.html">VOLUNTEER</a></li>
-                <li class="dropdown">
-                    <a href="resources.html" class="dropbtn">RESOURCES</a>
-                    <div class="dropdown-content">
-                        <a href="tips.html">TIPS & ADVICE</a>
-                        <a href="workshops.html">PREVIOUS WORKSHOPS</a>
-                        <a href="scholarships.html">SCHOLARSHIPS</a>
-                    </div>
-                </li>
-                <li><a href="events.html">EVENTS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <div class="socials">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sontsainitiative@gmail.com">
-                        <img src="social icons/mail.png">
-                    </a>
-                    <a href="https://www.youtube.com/@sontsainitiatve198">
-                        <img src="social icons/youtube.png">
-                    </a>
-                    <a href="https://www.instagram.com/sontsa_initiative/">
-                        <img src="social icons/instagram-logo.png">
-                    </a>
+
+<head>
+    <title> Sontsa Initiative </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <div class="header">
+        <a href="index.html">
+            <img src="site icons/grow.png"></img>
+            <h1>SONTSA INITIATIVE</h1>
+        </a>
+    </div>
+    <div class="topnav">
+        <ul>
+            <li class="nav-item"><a href="mentorship.html">MENTORSHIP</a></li>
+            <li class="nav-item"><a href="team.html">TEAM</a></li>
+            <li class="nav-item"><a href="volunteer.html">VOLUNTEER</a></li>
+            <li class="dropdown">
+                <a href="resources.html" class="dropbtn">RESOURCES</a>
+                <div class="dropdown-content">
+                    <a href="tips.html">TIPS & ADVICE</a>
+                    <a href="workshops.html">PREVIOUS WORKSHOPS</a>
+                    <a href="scholarships.html">SCHOLARSHIPS</a>
                 </div>
+            </li>
+            <li><a href="events.html">EVENTS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <div class="socials">
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sontsainitiative@gmail.com">
+                    <img src="social icons/mail.png">
+                </a>
+                <a href="https://www.youtube.com/@sontsainitiatve198">
+                    <img src="social icons/youtube.png">
+                </a>
+                <a href="https://www.instagram.com/sontsa_initiative/">
+                    <img src="social icons/instagram-logo.png">
+                </a>
+            </div>
+        </ul>
+    </div>
+    <div class="home-box">
+        <h3>OUR STORY</h3>
+        <p>
+            Our main reason for existing is the eternal wheel of life. We are in a cycle of life
+            and death. We experience so much pain but we also experience happiness. We are hateful
+            yet hold the capacity to love. Transient.
+        </p>
+    </div>
+    <div class="footer">
+        <div class="footer-bar left">
+            <ul class="no-bullets">
+                <li><a href="#">Mission Statement</a></li>
+                <li><a href="#">Mission Statement</a></li>
+                <li> <a href="#">Readings</a></li>
+                <li><a href="#">Resources</a></li>
+                <li> <a href="#">Newsletter</a></li>
             </ul>
         </div>
-        <div class="home-box">
-            <h3>OUR STORY</h3>
-            <p>
-                Our main reason for existing is the eternal wheel of life. We are in a cycle of life
-                and death. We experience so much pain but we also experience happiness. We are hateful
-                yet hold the capacity to love. Transient.
-            </p>
+        <div class="footer-logo">
+            <img src="site icons/grow.png"></img>
+            <a href="#">SONTSA INITIATIVE</a>
         </div>
-    </body>
+        <div class="footer-bar after-logo">
+            <ul class="no-bullets">
+                <li><a href="#">Discord</a></li>
+                <li><a href="#">WhatsApp</a></li>
+            </ul>
+        </div>
+        <div class="footer-bar right">
+            <ul class="no-bullets">
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">YouTube</a></li>
+            </ul>
+        </div>
+    </div>
+
+</body>
+
 </html>
