updated the home page logo to all pages

--- a/events.html
+++ b/events.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
-    <head>
-        <title> Sontsa Initiative </title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="header">
-            <a href="index.html">
-            <img src="sontsa logo.png"></img>
-            <h1>Sontsa Initiative</h1>
-            </a>
-        </div>
-        <div class="topnav">
-            <ul>
-                <li class="nav-item"><a href="mentorship.html">MENTORSHIP</a></li>
-                <li class="nav-item"><a href="team.html">TEAM</a></li>
-                <li class="nav-item"><a href="volunteer.html">VOLUNTEER</a></li>
-                <li class="dropdown">
-                    <a href="resources.html" class="dropbtn">RESOURCES</a>
-                    <div class="dropdown-content">
-                        <a href="tips.html">TIPS & ADVICE</a>
-                        <a href="workshops.html">PREVIOUS WORKSHOPS</a>
-                        <a href="scholarships.html">SCHOLARSHIPS</a>
-                    </div>
-                </li>
-                <li><a href="events.html">EVENTS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <div class="socials">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sontsainitiative@gmail.com">
-                        <img src="social icons/mail.png">
-                    </a>
-                    <a href="https://www.youtube.com/@sontsainitiatve198">
-                        <img src="social icons/youtube.png">
-                    </a>
-                    <a href="https://www.instagram.com/sontsa_initiative/">
-                        <img src="social icons/instagram-logo.png">
-                    </a>
+
+<head>
+    <title> Sontsa Initiative </title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <div class="header">
+        <a href="index.html">
+            <img src="site icons/grow.png"></img>
+            <h1>SONTSA INITIATIVE</h1>
+        </a>
+    </div>
+    </div>
+    <div class="topnav">
+        <ul>
+            <li class="nav-item"><a href="mentorship.html">MENTORSHIP</a></li>
+            <li class="nav-item"><a href="team.html">TEAM</a></li>
+            <li class="nav-item"><a href="volunteer.html">VOLUNTEER</a></li>
+            <li class="dropdown">
+                <a href="resources.html" class="dropbtn">RESOURCES</a>
+                <div class="dropdown-content">
+                    <a href="tips.html">TIPS & ADVICE</a>
+                    <a href="workshops.html">PREVIOUS WORKSHOPS</a>
+                    <a href="scholarships.html">SCHOLARSHIPS</a>
                 </div>
-            </ul>
-        </div>
-        <div class="home-box">
-            <h3>SONTSA EVENTS</h3>
-            <p>
-                Here is our public google calendar!
-            </p>
-        </div>
-    </body>
+            </li>
+            <li><a href="events.html">EVENTS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <div class="socials">
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sontsainitiative@gmail.com">
+                    <img src="social icons/mail.png">
+                </a>
+                <a href="https://www.youtube.com/@sontsainitiatve198">
+                    <img src="social icons/youtube.png">
+                </a>
+                <a href="https://www.instagram.com/sontsa_initiative/">
+                    <img src="social icons/instagram-logo.png">
+                </a>
+            </div>
+        </ul>
+    </div>
+    <div class="home-box">
+        <h3>SONTSA EVENTS</h3>
+        <p>
+            Here is our public google calendar!
+        </p>
+    </div>
+</body>
+
 </html>
