--- a/resources.html
+++ b/resources.html
@@ -8,8 +8,8 @@
     <body>
         <div class="header">
             <a href="index.html">
-            <img src="sontsa logo.png"></img>
-            <h1>Sontsa Initiative</h1>
+                <img src="site icons/grow.png"></img>
+                <h1>SONTSA INITIATIVE</h1>
             </a>
         </div>
         <div class="topnav">
