edited the footer for capitalized titles

--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
     <div class="footer">
         <div class="footer-bar left">
             <ul class="no-bullets">
-                <li><a href="#">Mission Statement</a></li>
-                <li><a href="#">Mission Statement</a></li>
-                <li> <a href="#">Readings</a></li>
-                <li><a href="#">Resources</a></li>
-                <li> <a href="#">Newsletter</a></li>
+                <li><a href="#">MISSION STATEMENT</a></li>
+                <li> <a href="#">READINGS</a></li>
+                <li><a href="#">RESOURCES</a></li>
+                <li> <a href="#">NEWSLETTER</a></li>
             </ul>
         </div>
         <div class="footer-logo">
@@ -66,14 +65,14 @@
         </div>
         <div class="footer-bar after-logo">
             <ul class="no-bullets">
-                <li><a href="#">Discord</a></li>
-                <li><a href="#">WhatsApp</a></li>
+                <li><a href="#">DISCORD</a></li>
+                <li><a href="#">WHATSAPP</a></li>
             </ul>
         </div>
         <div class="footer-bar right">
             <ul class="no-bullets">
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">YouTube</a></li>
+                <li><a href="#">INSTAGRAM</a></li>
+                <li><a href="#">YOUTUBE</a></li>
             </ul>
         </div>
     </div>
