created the top nav bar and footer

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 <body>
     <div class="header">
-        <a href="index.html">
-            <img src="site icons/grow.png"></img>
-            <h1>SONTSA INITIATIVE</h1>
+        <a href="index.html" class="menu-button">
+            <img src="site icons/list.svg"></img>
+        </a>
+        <a href="index.html" class="logo-center">
+            <img src="site icons/logo.png"></img>
         </a>
     </div>
     <div class="topnav">
@@ -50,32 +52,31 @@
             yet hold the capacity to love. Transient.
         </p>
     </div>
-    <div class="footer">
-        <div class="footer-bar left">
-            <ul class="no-bullets">
-                <li><a href="#">MISSION STATEMENT</a></li>
-                <li> <a href="#">READINGS</a></li>
-                <li><a href="#">RESOURCES</a></li>
-                <li> <a href="#">NEWSLETTER</a></li>
-            </ul>
+    <footer class="footer">
+        <div class="container">
+            <div class="logo">
+                <img src="site icons/logo.png" />
+            </div>
+            <form class="newsletter">
+                <p class="newsletter-text">sign up for our newsletter:</p>
+                <input type="email" />
+            </form>
+            <nav class="footer-nav">
+                <ul class="no-bullets">
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">RESOURCES</a></li>
+                </ul>
+            </nav>
+            <nav class="footer-nav">
+                <ul class="no-bullets">
+                    <li><a href="#">DISCORD</a></li>
+                    <li><a href="#">WHATSAPP</a></li>
+                </ul>
+            </nav>
         </div>
-        <div class="footer-logo">
-            <img src="site icons/grow.png"></img>
-            <a href="#">SONTSA INITIATIVE</a>
-        </div>
-        <div class="footer-bar after-logo">
-            <ul class="no-bullets">
-                <li><a href="#">DISCORD</a></li>
-                <li><a href="#">WHATSAPP</a></li>
-            </ul>
-        </div>
-        <div class="footer-bar right">
-            <ul class="no-bullets">
-                <li><a href="#">INSTAGRAM</a></li>
-                <li><a href="#">YOUTUBE</a></li>
-            </ul>
-        </div>
-    </div>
+    </footer>
+
 
 </body>
 
