cleaned the css code a bit and index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="site icons/logo.png"></img>
         </a>
     </div>
-    <div class="topnav">
+    <!-- <div class="topnav">
         <ul>
             <li class="nav-item"><a href="mentorship.html">MENTORSHIP</a></li>
             <li class="nav-item"><a href="team.html">TEAM</a></li>
@@ -43,20 +43,12 @@
                 </a>
             </div>
         </ul>
-    </div>
+    </div> -->
     <div class="home-box">
-        <h3>OUR STORY</h3>
-        <p>
-            Our main reason for existing is the eternal wheel of life. We are in a cycle of life
-            and death. We experience so much pain but we also experience happiness. We are hateful
-            yet hold the capacity to love. Transient.
-        </p>
     </div>
     <footer class="footer">
         <div class="container">
-            <div class="logo">
-                <img src="site icons/logo.png" />
-            </div>
+            <img class = "logo-footer" src="site icons/logo.png" />
             <form class="newsletter">
                 <p class="newsletter-text">sign up for our newsletter:</p>
                 <input type="email" />
@@ -76,8 +68,4 @@
             </nav>
         </div>
     </footer>
-
-
 </body>
-
-</html>
