--- a/tips.html
+++ b/tips.html
@@ -1,50 +1,117 @@
 <!DOCTYPE html>
-    <head>
-        <title> Sontsa Initiative </title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <div class="header">
-            <a href="index.html">
-                <img src="site icons/grow.png"></img>
-                <h1>SONTSA INITIATIVE</h1>
-            </a>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Sontsa Initiative</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Martel:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <div class="header">
+      <a href="javascript:void(0);" class="menu-button" onclick="toggleMenu()">
+        <img src="site icons/list.svg" alt="Menu" />
+      </a>
+      <a href="index.html" class="logo-center">
+        <img src="site icons/logo.png" alt="Logo" />
+      </a>
+      <div class="placeholder"></div>
+    </div>
+    <div id="topnav" class="topnav">
+      <ul>
+        <li class="nav-item"><a href="mentorship.html">MENTORSHIP</a></li>
+        <li class="nav-item"><a href="team.html">TEAM</a></li>
+        <li class="nav-item"><a href="volunteer.html">VOLUNTEER</a></li>
+        <li class="dropdown">
+          <a
+            href="javascript:void(0);"
+            class="dropbtn"
+            onclick="toggleDropdown()"
+            >RESOURCES</a
+          >
+          <div class="dropdown-content" id="dropdown">
+            <a href="tips.html">TIPS & ADVICE</a>
+            <a href="workshops.html">PREVIOUS WORKSHOPS</a>
+            <a href="scholarships.html">SCHOLARSHIPS</a>
+          </div>
+        </li>
+        <li><a href="events.html">EVENTS</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+        <div class="socials">
+          <a
+            href="https://mail.google.com/mail/?view=cm&fs=1&to=sontsainitiative@gmail.com"
+          >
+            <img src="social icons/mail.png" />
+          </a>
+          <a href="https://www.youtube.com/@sontsainitiatve198">
+            <img src="social icons/youtube.png" />
+          </a>
+          <a href="https://www.instagram.com/sontsa_initiative/">
+            <img src="social icons/instagram-logo.png" />
+          </a>
         </div>
-        <div class="topnav">
-            <ul>
-                <li class="nav-item"><a href="mentorship.html">MENTORSHIP</a></li>
-                <li class="nav-item"><a href="team.html">TEAM</a></li>
-                <li class="nav-item"><a href="volunteer.html">VOLUNTEER</a></li>
-                <li class="dropdown">
-                    <a href="resources.html" class="dropbtn">RESOURCES</a>
-                    <div class="dropdown-content">
-                        <a href="tips.html">TIPS & ADVICE</a>
-                        <a href="workshops.html">PREVIOUS WORKSHOPS</a>
-                        <a href="scholarships.html">SCHOLARSHIPS</a>
-                    </div>
-                </li>
-                <li><a href="events.html">EVENTS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-                <div class="socials">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sontsainitiative@gmail.com">
-                        <img src="social icons/mail.png">
-                    </a>
-                    <a href="https://www.youtube.com/@sontsainitiatve198">
-                        <img src="social icons/youtube.png">
-                    </a>
-                    <a href="https://www.instagram.com/sontsa_initiative/">
-                        <img src="social icons/instagram-logo.png">
-                    </a>
-                </div>
-            </ul>
+      </ul>
+    </div>
+    <div class="home-box">
+      <div class="container">
+        <div class="hero-section">
+          <img
+            src="site icons/home-page-header.png"
+            alt="Sontsa Initiative Header"
+          />
         </div>
-        <div class="home-box">
-            <h3>TIPS & ADVICE</h3>
-            <p>
-                Here is a compiled list of tips and advice from 
-            </p>
+        <div class="our-story">
+          <img src="site icons/our-story-div.png" alt="Our Story Section" />
         </div>
-    </body>
+        <div class="our-work">
+          <img src="site icons/sontsa-work.png" alt="Our Work Section" />
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <img class="logo-footer" src="site icons/logo.png" alt="Footer Logo" />
+        <form class="newsletter">
+          <p class="newsletter-text">Sign up for our newsletter:</p>
+          <input type="email" placeholder="Your email" />
+        </form>
+        <nav class="footer-nav">
+          <ul class="no-bullets">
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">RESOURCES</a></li>
+          </ul>
+        </nav>
+        <nav class="footer-nav">
+          <ul class="no-bullets">
+            <li><a href="#">DISCORD</a></li>
+            <li><a href="#">WHATSAPP</a></li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+    <script>
+      function toggleMenu() {
+        var x = document.getElementById("topnav");
+        if (x.style.display === "block") {
+          x.style.display = "none";
+        } else {
+          x.style.display = "block";
+        }
+      }
+
+      function toggleDropdown() {
+        var x = document.getElementById("dropdown");
+        if (x.style.display === "block") {
+          x.style.display = "none";
+        } else {
+          x.style.display = "block";
+        }
+      }
+    </script>
+  </body>
 </html>
